# nomo-lsp

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
performance/: README.md  release-gate-thresholds.json
scripts/: lsp_release_gate.py
src/: backend.rs  formatting.rs  hover.rs  incremental.rs  inlay_hints.rs  main.rs  navigation.rs  rename.rs  semantic.rs  symbols.rs
