[package]
name = "nomo-lsp"
version = "0.0.0-20260713145859"
edition = "2024"
license = "MIT"
description = "Language Server Protocol implementation for the Nomo programming language"

[[bin]]
name = "nomo-lsp"
path = "src/main.rs"

[dependencies]
nomo = { git = "https://github.com/nomo-lang/nomo.git", rev = "77b0386" }
nomo-lsp-bridge = { git = "https://github.com/nomo-lang/nomo.git", rev = "77b0386" }
tower-lsp = "0.20"
tokio = { version = "1", features = ["rt-multi-thread", "io-std", "macros"] }
dashmap = "6"
sha2 = "0.10"
serde_json = "1"
